crates/libs/c/src/Microsoft/MsQuic/mod.rs

#[cfg(feature = "Win32_Networking_WinSock")]
impl core::fmt::Debug for QUIC_LISTENER_EVENT_0_0 {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
        f.debug_struct("QUIC_LISTENER_EVENT_0_0")
            .field("Info", &self.Info)
            .field("Connection", &self.Connection)
            .finish()
    }
}
#[cfg(feature = "Win32_Networking_WinSock")]
impl windows_core::TypeKind for QUIC_LISTENER_EVENT_0_0 {
    type TypeKind = windows_core::CopyType;
}
#[cfg(feature = "Win32_Networking_WinSock")]
impl PartialEq for QUIC_LISTENER_EVENT_0_0 {
    fn eq(&self, other: &Self) -> bool {
        self.Info == other.Info && self.Connection == other.Connection
    }
}
#[cfg(feature = "Win32_Networking_WinSock")]
impl Eq for QUIC_LISTENER_EVENT_0_0 {}
#[cfg(feature = "Win32_Networking_WinSock")]
impl Default for QUIC_LISTENER_EVENT_0_0 {
    fn default() -> Self {
        unsafe { core::mem::zeroed() }
    }
}
#[repr(C)]
#[cfg(feature = "Win32_Networking_WinSock")]
pub struct QUIC_LISTENER_EVENT_0_1 {
    pub _bitfield: u8,
}
#[cfg(feature = "Win32_Networking_WinSock")]
impl Copy for QUIC_LISTENER_EVENT_0_1 {}
#[cfg(feature = "Win32_Networking_WinSock")]
impl Clone for QUIC_LISTENER_EVENT_0_1 {
    fn clone(&self) -> Self {
        *self
    }
}
#[cfg(feature = "Win32_Networking_WinSock")]
impl core::fmt::Debug for QUIC_LISTENER_EVENT_0_1 {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
        f.debug_struct("QUIC_LISTENER_EVENT_0_1")
            .field("_bitfield", &self._bitfield)
            .finish()
    }
}
#[cfg(feature = "Win32_Networking_WinSock")]
impl windows_core::TypeKind for QUIC_LISTENER_EVENT_0_1 {
    type TypeKind = windows_core::CopyType;
}
#[cfg(feature = "Win32_Networking_WinSock")]
impl PartialEq for QUIC_LISTENER_EVENT_0_1 {
    fn eq(&self, other: &Self) -> bool {
        self._bitfield == other._bitfield
    }
}
#[cfg(feature = "Win32_Networking_WinSock")]
impl Eq for QUIC_LISTENER_EVENT_0_1 {}
#[cfg(feature = "Win32_Networking_WinSock")]
impl Default for QUIC_LISTENER_EVENT_0_1 {
    fn default() -> Self {
        unsafe { core::mem::zeroed() }
    }
}
#[repr(C)]
pub struct QUIC_LISTENER_STATISTICS {
    pub TotalAcceptedConnections: u64,
    pub TotalRejectedConnections: u64,
    pub BindingRecvDroppedPackets: u64,
}
impl Copy for QUIC_LISTENER_STATISTICS {}
impl Clone for QUIC_LISTENER_STATISTICS {
    fn clone(&self) -> Self {
        *self
    }
}
impl core::fmt::Debug for QUIC_LISTENER_STATISTICS {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
        f.debug_struct("QUIC_LISTENER_STATISTICS")
            .field("TotalAcceptedConnections", &self.TotalAcceptedConnections)
            .field("TotalRejectedConnections", &self.TotalRejectedConnections)
            .field("BindingRecvDroppedPackets", &self.BindingRecvDroppedPackets)
            .finish()
    }
}
impl windows_core::TypeKind for QUIC_LISTENER_STATISTICS {
    type TypeKind = windows_core::CopyType;
}
impl PartialEq for QUIC_LISTENER_STATISTICS {
    fn eq(&self, other: &Self) -> bool {
        self.TotalAcceptedConnections == other.TotalAcceptedConnections
            && self.TotalRejectedConnections == other.TotalRejectedConnections
            && self.BindingRecvDroppedPackets == other.BindingRecvDroppedPackets
    }
}
impl Eq for QUIC_LISTENER_STATISTICS {}
impl Default for QUIC_LISTENER_STATISTICS {
    fn default() -> Self {
        unsafe { core::mem::zeroed() }
    }
}
#[repr(C)]
#[cfg(feature = "Win32_Networking_WinSock")]
pub struct QUIC_NEW_CONNECTION_INFO {
    pub QuicVersion: u32,
    pub LocalAddress: *const windows::Win32::Networking::WinSock::SOCKADDR_INET,
    pub RemoteAddress: *const windows::Win32::Networking::WinSock::SOCKADDR_INET,
    pub CryptoBufferLength: u32,
    pub ClientAlpnListLength: u16,
    pub ServerNameLength: u16,
    pub NegotiatedAlpnLength: u8,
    pub CryptoBuffer: *const u8,
    pub ClientAlpnList: *const u8,
    pub NegotiatedAlpn: *const u8,
    pub ServerName: windows_core::PCSTR,
}
#[cfg(feature = "Win32_Networking_WinSock")]
impl Copy for QUIC_NEW_CONNECTION_INFO {}
#[cfg(feature = "Win32_Networking_WinSock")]
impl Clone for QUIC_NEW_CONNECTION_INFO {
    fn clone(&self) -> Self {
        *self
    }
}
#[cfg(feature = "Win32_Networking_WinSock")]
impl core::fmt::Debug for QUIC_NEW_CONNECTION_INFO {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
        f.debug_struct("QUIC_NEW_CONNECTION_INFO")
            .field("QuicVersion", &self.QuicVersion)
            .field("LocalAddress", &self.LocalAddress)
            .field("RemoteAddress", &self.RemoteAddress)
            .field("CryptoBufferLength", &self.CryptoBufferLength)
            .field("ClientAlpnListLength", &self.ClientAlpnListLength)
            .field("ServerNameLength", &self.ServerNameLength)
            .field("NegotiatedAlpnLength", &self.NegotiatedAlpnLength)
            .field("CryptoBuffer", &self.CryptoBuffer)
            .field("ClientAlpnList", &self.ClientAlpnList)
            .field("NegotiatedAlpn", &self.NegotiatedAlpn)
            .field("ServerName", &self.ServerName)
            .finish()
    }
}
#[cfg(feature = "Win32_Networking_WinSock")]
impl windows_core::TypeKind for QUIC_NEW_CONNECTION_INFO {
    type TypeKind = windows_core::CopyType;
}
#[cfg(feature = "Win32_Networking_WinSock")]
impl PartialEq for QUIC_NEW_CONNECTION_INFO {
    fn eq(&self, other: &Self) -> bool {
        self.QuicVersion == other.QuicVersion
            && self.LocalAddress == other.LocalAddress
            && self.RemoteAddress == other.RemoteAddress
            && self.CryptoBufferLength == other.CryptoBufferLength
            && self.ClientAlpnListLength == other.ClientAlpnListLength
            && self.ServerNameLength == other.ServerNameLength
            && self.NegotiatedAlpnLength == other.NegotiatedAlpnLength
            && self.CryptoBuffer == other.CryptoBuffer
            && self.ClientAlpnList == other.ClientAlpnList
            && self.NegotiatedAlpn == other.NegotiatedAlpn
            && self.ServerName == other.ServerName
    }
}
#[cfg(feature = "Win32_Networking_WinSock")]
impl Eq for QUIC_NEW_CONNECTION_INFO {}
#[cfg(feature = "Win32_Networking_WinSock")]
impl Default for QUIC_NEW_CONNECTION_INFO {
    fn default() -> Self {
        unsafe { core::mem::zeroed() }
    }
}
#[repr(C)]
pub struct QUIC_REGISTRATION_CONFIG {
    pub AppName: windows_core::PCSTR,
    pub ExecutionProfile: QUIC_EXECUTION_PROFILE,
}
impl Copy for QUIC_REGISTRATION_CONFIG {}
impl Clone for QUIC_REGISTRATION_CONFIG {
    fn clone(&self) -> Self {
        *self
    }
}
impl core::fmt::Debug for QUIC_REGISTRATION_CONFIG {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
        f.debug_struct("QUIC_REGISTRATION_CONFIG")
            .field("AppName", &self.AppName)
            .field("ExecutionProfile", &self.ExecutionProfile)
            .finish()
    }
}
impl windows_core::TypeKind for QUIC_REGISTRATION_CONFIG {
    type TypeKind = windows_core::CopyType;
}
impl PartialEq for QUIC_REGISTRATION_CONFIG {
    fn eq(&self, other: &Self) -> bool {
        self.AppName == other.AppName && self.ExecutionProfile == other.ExecutionProfile
    }
}
impl Eq for QUIC_REGISTRATION_CONFIG {}
impl Default for QUIC_REGISTRATION_CONFIG {
    fn default() -> Self {
        unsafe { core::mem::zeroed() }
    }
}
#[repr(C)]
pub struct QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_EX_W {
    pub Attribute: u32,
    pub BufferLength: u32,
    pub Buffer: *mut core::ffi::c_void,
}
impl Copy for QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_EX_W {}
impl Clone for QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_EX_W {
    fn clone(&self) -> Self {
        *self
    }
}
impl core::fmt::Debug for QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_EX_W {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
        f.debug_struct("QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_EX_W")
            .field("Attribute", &self.Attribute)
            .field("BufferLength", &self.BufferLength)
            .field("Buffer", &self.Buffer)
            .finish()
    }
}
impl windows_core::TypeKind for QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_EX_W {
    type TypeKind = windows_core::CopyType;
}
impl PartialEq for QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_EX_W {
    fn eq(&self, other: &Self) -> bool {
        self.Attribute == other.Attribute
            && self.BufferLength == other.BufferLength
            && self.Buffer == other.Buffer
    }
}
impl Eq for QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_EX_W {}
impl Default for QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_EX_W {
    fn default() -> Self {
        unsafe { core::mem::zeroed() }
    }
}
#[repr(C)]
pub struct QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_W {
    pub Attribute: u32,
    pub Buffer: *mut core::ffi::c_void,
}
impl Copy for QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_W {}
impl Clone for QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_W {
    fn clone(&self) -> Self {
        *self
    }
}
impl core::fmt::Debug for QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_W {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
        f.debug_struct("QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_W")
            .field("Attribute", &self.Attribute)
            .field("Buffer", &self.Buffer)
            .finish()
    }
}
impl windows_core::TypeKind for QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_W {
    type TypeKind = windows_core::CopyType;
}
impl PartialEq for QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_W {
    fn eq(&self, other: &Self) -> bool {
        self.Attribute == other.Attribute && self.Buffer == other.Buffer
    }
}
impl Eq for QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_W {}
impl Default for QUIC_SCHANNEL_CONTEXT_ATTRIBUTE_W {
    fn default() -> Self {
        unsafe { core::mem::zeroed() }
    }
}
#[repr(C)]
pub struct QUIC_SCHANNEL_CREDENTIAL_ATTRIBUTE_W {
    pub Attribute: u32,
    pub BufferLength: u32,
    pub Buffer: *mut core::ffi::c_void,
}
impl Copy for QUIC_SCHANNEL_CREDENTIAL_ATTRIBUTE_W {}
impl Clone for QUIC_SCHANNEL_CREDENTIAL_ATTRIBUTE_W {
    fn clone(&self) -> Self {
        *self
    }
}
impl core::fmt::Debug for QUIC_SCHANNEL_CREDENTIAL_ATTRIBUTE_W {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
        f.debug_struct("QUIC_SCHANNEL_CREDENTIAL_ATTRIBUTE_W")
            .field("Attribute", &self.Attribute)
            .field("BufferLength", &self.BufferLength)
            .field("Buffer", &self.Buffer)
            .finish()
    }
}
impl windows_core::TypeKind for QUIC_SCHANNEL_CREDENTIAL_ATTRIBUTE_W {
    type TypeKind = windows_core::CopyType;
}
impl PartialEq for QUIC_SCHANNEL_CREDENTIAL_ATTRIBUTE_W {
    fn eq(&self, other: &Self) -> bool {
        self.Attribute == other.Attribute
            && self.BufferLength == other.BufferLength
            && self.Buffer == other.Buffer
    }
}
impl Eq for QUIC_SCHANNEL_CREDENTIAL_ATTRIBUTE_W {}
impl Default for QUIC_SCHANNEL_CREDENTIAL_ATTRIBUTE_W {
    fn default() -> Self {
        unsafe { core::mem::zeroed() }
    }
}
